# configurations

./: .gitignore  .gitmodules  LICENSE
automator/quick-actions/: services
bash/: add-bash-to-shells.md
dictionary/: webster's-revised-unabridged-dictionary-1913.url  webster's-revised-unabridged-dictionary-1913.webloc
emacs-plus/: build.yml
homebrew/config/: macos-migrations-with-brewfile.url  macos-migrations-with-brewfile.webloc
homebrew/config/brewfiles/: Brewfile
karabiner-elements/config/: karabiner.json
karabiner-elements/config/karabiner/: karabiner.json
keyboard/config/remappings/: hidutil-key-remapping-generator.url  hidutil-key-remapping-generator.webloc  remappings.txt
keyboard/shortcuts/default/: mac.url  mac.webloc
kitty/config/kitty/: kitty.conf  macos-launch-services-cmdline  startup.conf
monkeytype/config/: settings.json
mpv/macos/mpv/: input.conf  mpv.conf
mpv/windows/portable_config/: input.conf  mpv.conf
neovide/config/neovide/: config.toml
neptunes/config/themes/: neptunes-themes.url  neptunes-themes.webloc
python/config/python/.venvs/neovim/: main.py  pyproject.toml
sioyek/config/sioyek/: prefs_user.config
visual-studio-code/config/: settings.json
visual-studio-code/config/visual-studio-code/: .stow-local-ignore  settings.json
visual-studio-code/extensions/catppuccin-for-vscode/: catppuccin-visual-studio-code.url  catppuccin-visual-studio-code.webloc
visual-studio-code/extensions/catppuccin-icons-for-vscode/: catppuccin-icons-for-vscode.url  catppuccin-icons-for-vscode.webloc
zsh/: add-zsh-to-shells.md
(+159 files in other folders)
